feat (JobTest) Refactored JobFlowService and added tests